update connection handling