@@ -76,10 +76,11 @@ public class GraphController {
 	private double paneWidth;
 	private double paneHeight;
 
-	private Service service = new Service();
+	private final Service service = new Service();
 	private final Map<String, StationView> stationNodes = new HashMap<>();
 	private final Map<String, String> lineNameToId = new HashMap<>();
 	private final Map<String, AreteView> arreteViews = new HashMap<>();
+	private final Map<String, Arete> corresp = new HashMap<>();
 	private PanZoomHandler panZoomHandler;
 	private Graphe graphe;
 	private final List<String> historique = new ArrayList<>();
@@ -233,11 +234,11 @@ public class GraphController {
 		javafx.concurrent.Task<ItineraireResultat> tache = new javafx.concurrent.Task<>() {
 			@Override
 			protected ItineraireResultat call() {
-				Quai origineQuai = depart.getQuais().get(0);
+				Quai origineQuai = depart.getQuais().getFirst();
 				Map<Quai, DistanceAntecedants> distances =
 						backend.algo.Dijkstra.getDistanceAntecedantsMap(graphe, origineQuai);
 
-				Quai destQuai = arrivee.getQuais().get(0);
+				Quai destQuai = arrivee.getQuais().getFirst();
 				DistanceAntecedants infoDestination = distances.get(destQuai);
 				if (infoDestination == null) {
 					return null; // aucun chemin trouve
@@ -393,6 +394,10 @@ public class GraphController {
 			arreteViews.put(key, arrete);
 			graphPane.getChildren().add(0, arrete);
 		}
+		else{
+
+			corresp.put(arreteKey(source.getId(), destination.getId()), arete);
+		}
 	}
 
 	private void handlePopup(StationView node) {
@@ -429,9 +434,12 @@ public class GraphController {
 	}
 
 	public void highlightPath(List<String> quaiIdsOrdonnes) {
-		stationNodes.values().forEach(n -> n.setSelected(false));
-		arreteViews.values().forEach(e -> e.setHighlighted(false));
-		for (int i = 0; i < quaiIdsOrdonnes.size(); i++) {
+		Map<StationView,List<Arete>> correspMap = new HashMap<>();
+		resetHighlight();
+		Quai quaiDebut = graphe.getQuai(quaiIdsOrdonnes.getFirst());
+		Quai quaiFin = graphe.getQuai(quaiIdsOrdonnes.getLast());
+
+		for (int i = 1; i < quaiIdsOrdonnes.size(); i++) {
 			String quaiId = quaiIdsOrdonnes.get(i);
 			Quai quai = graphe.getQuai(quaiId);
 			if (quai == null) continue;
@@ -439,15 +447,35 @@ public class GraphController {
 			StationView node = stationNodes.get(quai.getStation().getId());
 			if (node != null) node.setSelected(true);
 
-			if (i > 0) {
-				String prevQuaiId = quaiIdsOrdonnes.get(i - 1);
-				AreteView arrete = arreteViews.get(arreteKey(prevQuaiId, quaiId));
-				if (arrete == null) {
-					arrete = arreteViews.get(arreteKey(quaiId, prevQuaiId));
-				}
-				if (arrete != null) arrete.setHighlighted(true);
+
+			String prevQuaiId = quaiIdsOrdonnes.get(i - 1);
+			AreteView arrete = arreteViews.get(arreteKey(prevQuaiId, quaiId));
+
+			if (arrete == null) {
+				arrete = arreteViews.get(arreteKey(quaiId, prevQuaiId));
 			}
+
+			if (arrete != null){
+				arrete.setHighlighted(true);
+			}
+			else
+				correspMap.computeIfAbsent(node, k -> new ArrayList<>()).add(corresp.get(arreteKey(prevQuaiId, quaiId)));
+
+
 		}
+		correspMap.forEach((station, arretes) -> {
+			StationPopup  popup=station.getPopup();
+			if (popup == null) {
+				popup = new StationPopup(station.getStation(), station.getCenterX(), station.getCenterY());
+				graphPane.getChildren().add(popup);
+				station.setPopup(popup);
+			}
+			String correspString = parseCorresp(arretes);
+			station.setCorresp(correspString);
+		});
+		stationNodes.get(quaiDebut.getStation().getId()).setStart(true);
+		stationNodes.get(quaiFin.getStation().getId()).setEnd(true);
+		stationNodes.get(quaiFin.getStation().getId()).setSelected(false);
 	}
 
 	private String arreteKey(String sourceQuaiId, String destQuaiId) {
@@ -455,9 +483,24 @@ public class GraphController {
 	}
 
 	public void highlightLine(String line) {
-		stationNodes.values().forEach(n -> n.setSelected(false));
+		resetHighlight();
 		arreteViews.values().forEach(e -> e.setHighlighted(
 				e.getArete().getLigne() != null && e.getArete().getLigne().getId().equals(line)));
 	}
 
+	public String parseCorresp(List<Arete> corresps){
+		Quai depart=corresps.getFirst().getSource();
+		Quai arrive=corresps.getLast().getDestination();
+
+		int poids = corresps.stream().mapToInt(Arete::getPoid).sum();
+
+		if (poids>=60)poids=Math.round(poids / 60f);
+		return depart.getLigne().getNom()+"->"+arrive.getLigne().getNom()+": "+poids+"s";
+	}
+
+	public void resetHighlight(){
+		stationNodes.values().forEach(n -> {n.setSelected(false); n.setStart(false);n.setEnd(false);n.setCorresp("");});
+		arreteViews.values().forEach(e -> e.setHighlighted(false));
+
+	}
 }
